--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,20 @@ body {
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+}
+
+th a {
+  color: #000;
+}
+
 .main {
   display: grid;
   grid-template-rows: 1fr;
   justify-items: center;
   row-gap: 20px;
+  padding-top: 20px;
 }
 
 .main .create-main .update-main {
@@ -44,4 +53,8 @@ body {
 }
 form p {
   font-size: 0.89em;
+}
+
+input .capital {
+  text-transform: capitalize;
 }
